fixed bug in header where nav menu was partially off screen

--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -5,7 +5,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  right: 0;
   z-index: 1000;
   background-color: #e8c0cb;
   color: white;
